--- a/src/main/resources/templates/adminDashboard.html
+++ b/src/main/resources/templates/adminDashboard.html
@@ -314,9 +314,9 @@
         <h2><i class="fas fa-user-shield"></i> Admin Panel</h2>
         <ul>
             <li><a th:href="@{/admin/dashboard}" class="active"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
-            <li><a th:href="@{/admin/wallets}"><i class="fas fa-wallet"></i> Wallets</a></li>
+            <li><a th:href="@{/admin/fee}"><i class="fas fa-wallet"></i> Admin Fee</a></li>
             <li><a th:href="@{/admin/users}"><i class="fas fa-users"></i> Users</a></li>
-            <li><a th:href="@{/admin/tickets}"><i class="fas fa-ticket-alt"></i> Tickets</a></li>
+            <li><a th:href="@{/admin/view-tickets}"><i class="fas fa-ticket-alt"></i> Tickets</a></li>
             <li><a th:href="@{/admin/transactions}"><i class="fas fa-exchange-alt"></i> Transactions</a></li>
             <li><a th:href="@{/logout}"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
         </ul>
