--- a/src/main/resources/templates/buyPNRTickets.html
+++ b/src/main/resources/templates/buyPNRTickets.html
@@ -437,7 +437,7 @@
                         <span th:unless="${passenger.sold}">Buy to view</span>
                     </div>
                     <div class="detail-item">
-                        <strong>Price:</strong> ₹<span th:text="${passenger.price + 20}"></span>
+                        <strong>Price:</strong> ₹<span th:text="${passenger.price + passenger.adminFee}"></span>
                     </div>
                     <div class="detail-item">
                         <strong>Document:</strong>
@@ -449,8 +449,8 @@
                 <!-- 💳 Razorpay -->
                 <div th:unless="${passenger.sold}">
                     <button type="button" class="btn btn-buy"
-                            th:onclick="'startPayment(' + ${passenger.id} + ',' + (${passenger.price + 20}) + ')'">
-                        <i class="fas fa-shopping-cart"></i> Buy (₹<span th:text="${passenger.price + 20}"></span>)
+                            th:onclick="'startPayment(' + ${passenger.id} + ',' + (${passenger.price + passenger.adminFee}) + ')'">
+                        <i class="fas fa-shopping-cart"></i> Buy (₹<span th:text="${passenger.price + passenger.adminFee}"></span>)
                     </button>
                 </div>
 
